open-vas.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-vas
spec:
  selector:
    app: open-vas
  ports:
  - port: 443
    targetPort: 443
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-vas
spec:
  selector:
    matchLabels:
      app: open-vas
  replicas: 1
  template:
    metadata:
      labels:
        app: open-vas
        type: security
    spec:
      containers:
      - name: open-vas
        image: mikesplain/openvas
        ports:
        - containerPort: 443
