bwd-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitwarden
---
apiVersion: v1
kind: Service
metadata:
  namespace: bitwarden
  name: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: websocket
    protocol: TCP
    port: 3012
    targetPort: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bitwarden
  name: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: bitwarden
        type: security
    spec:
      containers:
      - name: bitwarden
        image: vaultwarden/server:1.24.0-alpine
        volumeMounts:
          - mountPath: /data
            name: data
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 6
          periodSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 2
          failureThreshold: 5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - name: http
            containerPort: 80
          - name: websocket
            containerPort: 3012
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-bitwarden
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bitwarden
  annotations:
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: 'true'
    hajimari.io/icon: lock
    hajimari.io/appName	: Bitwarden
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
  name: bwd-ingress
spec:
  rules:
  - host: bwd.tristanlanoy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: bitwarden
              port:
                number: 80
