speedtest-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    hajimari.io/enable: 'true'
  name: speedtest-ingress
spec:
  rules:
  - host: speedtest.tristanlanoy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: open-speed-test
              port:
                number: 80
